--- a/Project1.html
+++ b/Project1.html
@@ -3,21 +3,19 @@
 <head>
     <title>Shopping Items List</title>
     <meta charset="UTF-8">
-    
 </head>
-<body>
 
+<body>
     <form>
         <label for="item">Shopping items list</label><br>
         <p>Submit all your items to the field and click submit.<br> Use " ; " as a separator for items.</p>
         <input type="text" id="item" name="item" value="Item 1; Item 2; Item 3 etc."><br><br>
-        <input type="submit" onclick="readItem()" value="Submit">
+        <button type="button" id="button" onclick="readItem()">Submit!</button>
     </form> 
     <br><br>
     <p>To help your shopping experience!</p>
     <div id="outputForm"></div>
 
-<script src="Project1.js">
-</script>
+<script src= "myScript.js"></script>
 </body>
 </html>
