--- a/Project1.html
+++ b/Project1.html
@@ -16,6 +16,7 @@
     <p>To help your shopping experience!</p>
     <div id="outputForm"></div>
 
-<script src= "myScript.js"></script>
+<script src= "myScript.js">
+</script>
 </body>
 </html>
