--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <p>To help your shopping experience!</p>
     <div id="outputForm"></div>
 
-<script src= "myScript.js">
+<script src= "Project1.js">
 </script>
 </body>
 </html>
